--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: The-Writings-of-Thomas-Paine---Volume-4--1794-1796---The-Age-of-Reason_3743
-_version: 0.1.0
+_version: 0.2.0
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Paine, Thomas
@@ -37,6 +40,8 @@ description: "The Age of Reason; Being an Investigation of True and Fabulous The
   \ what they viewed as potentially revolutionary ideas, the British government prosecuted\
   \ printers and book-sellers who tried to publish and distribute it. Nevertheless,\
   \ Paine's work inspired and guided many free thinkers.\n From Wikipedia (CC BY-SA)."
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/3743#The-Writings-of-Thomas-Paine---Volume-4--1794-1796---The-Age-of-Reason
 gutenberg_bookshelf:
 - Banned Books from Anne Haight's list
 - Atheism
